Name:                   replay-free
Version:                0.0
Author:                 Nickolay Kudasov<nickolay.kudasov@gmail.com>
Maintainer:             Nickolay Kudasov<nickolay.kudasov@gmail.com>
Homepage:               https://github.com/fizruk/replay-free
Bug-Reports:            https://github.com/fizruk/replay-free/issues
License:                BSD3
License-File:           LICENSE
Synopsis:               Logging and replaying interpretations of free structures.
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple
Stability:              experimental
Category:               Control

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:
    Control.Replay.Class
    Control.Monad.Trans.Free.Replay
  Build-Depends:        base >= 4 && < 5
                      , free >= 4.2
                      , transformers >= 0.3
                      , comonad >= 4.0

Source-Repository head
  Type:                 git
  Location:             https://github.com/fizruk/relpay-free.git
